--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="img/genie.png">
+    <link rel="icon" type="image/png" href="https://cenvoldyt.github.io/pictogenie.github.io/img/genie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PictoGenie</title>
     <style>
@@ -51,7 +51,7 @@
 <body>
 
     <div class="navbar">
-        <img src="img/genie.png" alt="PictoGenie Logo" width="50" height="50">
+        <img src="https://cenvoldyt.github.io/pictogenie.github.io/img/genie.png" alt="PictoGenie Logo" width="50" height="50">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Credits</a></li>
