--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
         .navbar ul li a {
             text-decoration: none;
-            color: #000000;
+            color: #ffffff;
             font-weight: bold;
         }
 
         .navbar ul li a:hover {
-            color: #0073e6;
+            font-style: underline;
         }
     </style>
 </head>
