--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="https://cenvoldyt.github.io/pictogenie.github.io/img/genie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PictoGenie</title>
+    <title>PictoGenie - Free AI Image Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet"> 
     <style>
         body {
