--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             position: relative;
         }
 
-        .navbar ul li a:hover {
-            color: #ffffff;
+        .navbar ul li a:hover::after {
+            width: 100%;
         }
 
         .navbar ul li a::after {
@@ -60,8 +60,36 @@
             transition: width 0.3s ease;
         }
 
-        .navbar ul li a:hover::after {
-            width: 100%;
+        .hero {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 70px); /* Adjusted to account for the navbar height */
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 48px;
+            color: #000000;
+            font-weight: bold;
+            margin: 20px 0;
+        }
+
+        .hero button {
+            background-color: #5bcff5;
+            color: #ffffff;
+            border: none;
+            padding: 15px 30px;
+            font-size: 18px;
+            font-weight: 600;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .hero button:hover {
+            background-color: #4ab3d8;
         }
     </style>
 </head>
@@ -74,6 +102,11 @@
             <li><a href="#">Credits</a></li>
             <li><a href="#">Generate</a></li>
         </ul>
+    </div>
+
+    <div class="hero">
+        <h1>Freedom to Create</h1>
+        <button onclick="window.location.href='https://cenvoldyt.github.io/pictogenie.github.io/generate'">Get Started</button>
     </div>
 
 </body>
