--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <div class="navbar">
         <img src="https://cenvoldyt.github.io/pictogenie.github.io/img/genie.png" alt="PictoGenie Logo" width="50" height="50">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Credits</a></li>
-            <li><a href="#">Generate</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/credits">Credits</a></li>
+            <li><a href="/generate">Generate</a></li>
         </ul>
     </div>
 
