--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
         <h1>Freedom to Create</h1>
         <button onclick="window.location.href='https://cenvoldyt.github.io/pictogenie.github.io/generate'">Get Started</button>
     </div>
+    <script async="async" data-cfasync="false" src="//pl24208338.cpmrevenuegate.com/afa5851f202c8eb42f245139ca73298f/invoke.js"></script>
+<div id="container-afa5851f202c8eb42f245139ca73298f"></div>
 
 </body>
 </html>
