--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="https://cenvoldyt.github.io/pictogenie.github.io/img/genie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PictoGenie - Free AI Image Generator</title>
+    <title>FileVault - Secure File-Transfer Service</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet"> 
     <style>
         body {
@@ -96,17 +96,16 @@
 <body>
 
     <div class="navbar">
-        <img src="https://cenvoldyt.github.io/pictogenie.github.io/img/genie.png" alt="PictoGenie Logo" width="50" height="50">
+        <img src="https://cenvoldyt.github.io/filevault.github.io/img/vault.png" alt="PictoGenie Logo" width="50" height="50">
         <ul>
-            <li><a href="https://cenvoldyt.github.io/pictogenie.github.io/">Home</a></li>
-            <li><a href="https://cenvoldyt.github.io/pictogenie.github.io/credits">Credits</a></li>
-            <li><a href="https://cenvoldyt.github.io/pictogenie.github.io/generate">Generate</a></li>
+            <li><a href="https://cenvoldyt.github.io/filevault.github.io/">Home</a></li>
+            <li><a href="https://cenvoldyt.github.io/filevault.github.io/credits">Vault Keys</a></li>
         </ul>
     </div>
 
     <div class="hero">
-        <h1>Freedom to Create</h1>
-        <button onclick="window.location.href='https://cenvoldyt.github.io/pictogenie.github.io/generate'">Get Started</button>
+        <h1>Safest way to share files!</h1>
+        <button onclick="window.location.href='https://cenvoldyt.github.io/filevault.github.io/upload'">Get Started</button>
     </div>
     <script async="async" data-cfasync="false" src="//pl24208338.cpmrevenuegate.com/afa5851f202c8eb42f245139ca73298f/invoke.js"></script>
 <div id="container-afa5851f202c8eb42f245139ca73298f"></div>
